<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/app_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playfair_display"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/text"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/blue"/>
    <TextView
        android:id="@+id/tvAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tvAgetext"
        android:textColor="@color/black"
        android:textSize="25sp"

        />
    <SeekBar
        android:id="@+id/sbAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="@string/maxAge"
        android:layout_marginTop="20dp"

        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/line_shape"

        />

    <TextView
        android:id="@+id/Tvjeunez"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/TvJeunezText"
        android:textColor="@color/black"
        android:textSize="25sp"
        />

    <RadioGroup

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/rbtOui"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/ouiText"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/rbtNon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/nonText"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RadioGroup>
    
    <EditText
        android:id="@+id/etMesureGlycemie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginTop="20dp"
        android:hint="@string/hintMesure"
    />

    <Button
        android:id="@+id/btnConsulter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/consulterText"
        android:textSize="18sp"
        android:onClick="calculer"/>

    <TextView
        android:id="@+id/txtRes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="..."
        android:textColor="@color/black"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        />
</LinearLayout>